--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,9 +11,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [14.x, 16.x, 18.x]
@@ -26,7 +24,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: cd backend
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+
+    - name: Install, Build and Test
+      run: |
+        cd backend
+        npm ci
+        npm run build --if-present
+        npm test
