--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,10 +28,10 @@ jobs:
         cache: 'npm'
     - name: Install Node Dependencies
       run: npm ci
-      working-directory: ./backend
+      working-directory: backend
     - name: Run tests Backend
       run: npm test
-      working-directory: ./backend
+      working-directory: backend
     - name: Build Node Backend 
       run: npm run build --if-present
-      working-directory: ./backend
+      working-directory: backend
