--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,6 +3,9 @@
 
 name: Node.js CI
 
+defaults:
+  run:
+    working-directory: backend
 on:
   push:
     branches: [ "main" ]
@@ -28,10 +31,7 @@ jobs:
         cache: 'npm'
     - name: Install Node Dependencies
       run: npm ci
-      working-directory: backend
     - name: Run tests Backend
       run: npm test
-      working-directory: backend
     - name: Build Node Backend 
       run: npm run build --if-present
-      working-directory: backend
