--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,9 +3,6 @@
 
 name: Node.js CI
 
-defaults:
-  run:
-    working-directory: backend
 on:
   push:
     branches: [ "main" ]
@@ -14,24 +11,24 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Set up Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - name: Install Node Dependencies
-      run: npm ci
-    - name: Run tests Backend
-      run: npm test
-    - name: Build Node Backend 
-      run: npm run build --if-present
+        cache-dependency-path: backend/package-lock.json
+
+    - name: Install, Build and Test in backend
+      run: |
+        cd backend
+        npm ci
+        npm run build
+        npm test
