--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [ 16.x, 18.x, 21.x]
 
     steps:
     - uses: actions/checkout@v3
@@ -30,5 +30,5 @@ jobs:
       run: |
         cd backend
         npm ci
-        npm run build
+        npm run prod
         npm test
