fix: changed scope action

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,9 +26,8 @@ jobs:
         cache: 'npm'
         cache-dependency-path: backend/package-lock.json
 
-    - name: Install, Build and Test in backend
+    - name: Test Backend
       run: |
         cd backend
         npm ci
-        npm run prod
         npm test
