fix: chenged frequency of execution to only when changes in related folder happen

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -3,7 +3,13 @@
 
 name: Backend-Node.js CI
 
-on: [push, pull_request]
+on:
+  push:
+    paths:
+      - 'backend/**'
+  pull_request:
+    paths:
+      - 'backend/**'
 
 jobs:
   build:
