ci: now the files are executed also when the action changes

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -7,9 +7,11 @@ on:
   push:
     paths:
       - 'backend/**'
+      - '.github/workflows/backend.yml'
   pull_request:
     paths:
       - 'backend/**'
+      - '.github/workflows/backend.yml'
 
 jobs:
   build:
