--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Backend-Node.js CI
+name: Run Tests Backend
 
 on:
   push:
@@ -19,10 +19,12 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [ 18.x, 20.x]
+        node-version: [18.x, 20.x]
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
+      
     - name: Set up Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
@@ -30,8 +32,16 @@ jobs:
         cache: 'npm'
         cache-dependency-path: backend/package-lock.json
 
-    - name: Test Backend
+    - name: Install Dependencies
       run: |
         cd backend
         npm ci
-        npm test
+
+    - name: Run Tests
+      run: |
+        cd backend
+        npm test:ci
+        cp coverage/lcov.info ../lcov.info
+
+    - name: Jest Coverage Comment
+      uses: MishaKav/jest-coverage-comment@main
