fix: corrected test command mispell

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Run Tests
       run: |
         cd backend
-        npm test:ci
+        npm run test:ci
         cp coverage/lcov.info ../lcov.info
 
     - name: Jest Coverage Comment
