--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -42,14 +42,11 @@ jobs:
         cd backend
         npm run test:ci
 
-    - name: Jest Coverage Comment
-      uses: MishaKav/jest-coverage-comment@main
+    - name: Test Report
+      uses: dorny/test-reporter@v1
+      if: success() || failure()
       with:
-        coverage-summary-path: ./backend/coverage/coverage-summary.json
-        title: Backend Test Coverage
-        summary-title: Summary
-        badge-title: Coverage
-        hide-comment: false
-        create-new-comment: false
-        hide-summary: false
+          name: JEST Tests            
+          path: reports/jest-*.xml
+          reporter: jest-junit
       
