--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test jest",
-    "test:ci" : "NODE_ENV=test jest --coverage --coverageReporters json-summary",
+    "test:ci": "NODE_ENV=test jest --ci --reporters=default --reporters=jest-junit",
     "dev": "NODE_ENV=development nodemon index.js",
     "prod": "NODE_ENV=production node index.js"
   },
@@ -37,8 +37,18 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "mongodb-memory-server": "^9.1.6",
     "nodemon": "^3.0.3",
     "supertest": "^6.3.4"
+  },
+  "jest-junit": {
+    "outputDirectory": "reports",
+    "outputName": "jest-junit.xml",
+    "ancestorSeparator": " › ",
+    "uniqueOutputName": "false",
+    "suiteNameTemplate": "{filepath}",
+    "classNameTemplate": "{classname}",
+    "titleTemplate": "{title}"
   }
 }
