--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Run Tests Backend
+name: Tests Backend (Node.js - Jest)
 
 on:
   push:
@@ -47,6 +47,6 @@ jobs:
       if: success() || failure()
       with:
           name: JEST Tests            
-          path: reports/jest-*.xml
+          path: backend/reports/jest-*.xml
           reporter: jest-junit
       
