--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Ceredavide/WEBLAB-PROJEKT#readme",
   "jest": {
     "verbose": true,
+    "setupFiles": ["<rootDir>/jest.setup.js"],
     "testEnvironment": "node"
   },
   "dependencies": {
