--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -46,7 +46,7 @@ jobs:
       uses: dorny/test-reporter@v1
       if: success() || failure()
       with:
-          name: JEST Tests            
+          name: JEST Tests Node.js ${{matrix.node-version}}           
           path: backend/reports/jest-*.xml
           reporter: jest-junit
       
