--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,4 +1,4 @@
-name: Frontend-Angular CI
+name: Test Frontend (Angular - Karma)
 
 on:
   push:
@@ -11,32 +11,25 @@ on:
       - '.github/workflows/frontend.yml'
 
 jobs:
-  build:
+  angular:
+    name: Angular Build
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        node-version: [18.x]
-
+        node-version: [20]
     steps:
-    - uses: actions/checkout@v2
+      - name: Checkout the source code
+        uses: actions/checkout@v3
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
+      - name: Setup Node.js $
+        uses: actions/setup-node@v3
+        with:
+          node-version: $
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
 
-    - name: Install dependencies
-      run: |
-        cd frontend
-        npm ci
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Build
-      run: |
-        cd frontend
-        npm run build:ci
-
-    - name: Test
-      run: |
-        cd frontend
-        npm run test:ci
+      - name: Run tests
+        run: npm run test:ci
