--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -21,15 +21,19 @@ jobs:
       - name: Checkout the source code
         uses: actions/checkout@v3
 
-      - name: Setup Node.js $
+      - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: $
+          node-version: ${{ matrix.node-version }}
           cache: 'npm'
           cache-dependency-path: package-lock.json
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
-        run: npm run test:ci
+      - name: Install Dependencies
+        run: |
+            cd frontend
+            npm ci
+    
+      - name: Run Tests
+        run: |
+            cd frontend
+            npm run test:ci
